--- a/li_window_1/mainwindow.ui
+++ b/li_window_1/mainwindow.ui
@@ -656,7 +656,7 @@
            </item>
           </layout>
          </widget>
-         <widget class="QWidget" name="">
+         <widget class="QWidget" name="layoutWidget">
           <property name="geometry">
            <rect>
             <x>326</x>
